--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
             <h1>Bem-vindo à EvoTech</h1>
+            <p>Criação de sistemas personalizados usando Delphi, integrados com bancos de dados robustos via FireDAC, relatórios detalhados e profissionais com Rave Reports, garantindo soluções rápidas, seguras e adaptáveis às suas necessidades específicas.</p>
             <p class="lead">Especialista em Desenvolvimento de Sistemas, Sites e Aplicações Web</p>
             <a href="#contact" class="btn btn-light btn-lg">Solicitar Orçamento</a>
         </div>
@@ -47,7 +48,7 @@
                 <div class="col-md-4">
                     <i class="bi bi-laptop fs-1"></i>
                     <h4>Desenvolvimento de Sistemas</h4>
-                    <p>Sistemas personalizados para atender às suas necessidades específicas.</p>
+                    <p>Criação de sistemas personalizados usando Delphi, integrados com bancos de dados robustos via FireDAC, relatórios detalhados e profissionais com Rave Reports, garantindo soluções rápidas, seguras e adaptáveis às suas necessidades específicas.</p>
                 </div>
                 <div class="col-md-4">
                     <i class="bi bi-code-slash fs-1"></i>
