--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                 <div class="col-md-4">
                     <i class="bi bi-code-slash fs-1"></i>
                     <h4>Criação de Sites</h4>
-                    <p>Sites responsivos e otimizados para todos os dispositivos.</p>
+                    <p>Desenvolvemos sites modernos, responsivos e otimizados para SEO, garantindo uma experiência incrível em qualquer dispositivo. Além disso, criamos aplicações web interativas com integração de APIs, painéis administrativos personalizados e suporte às mais recentes tecnologias web, como HTML5, CSS3, Bootstrap e frameworks JavaScript.</p>
                 </div>
                 <div class="col-md-4">
                     <i class="bi bi-server fs-1"></i>
                     <h4>Integração com Bancos de Dados</h4>
-                    <p>Soluções robustas com MySQL, MariaDB e Firebird.</p>
+                    <p>Oferecemos integração eficiente com bancos de dados como MySQL, MariaDB e Firebird. Nossos serviços incluem modelagem de dados, otimização de consultas, configuração de servidores e implementação de conexões seguras e rápidas, garantindo o melhor desempenho para seus sistemas e aplicações.</p>
                 </div>
             </div>
         </div>
