--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section id="about" class="py-5">
         <div class="container text-center">
             <h2 class="mb-4">Sobre Nós</h2>
-            <p>A EvoTech é especializada em criar soluções tecnológicas inovadoras e sob medida. Com anos de experiência em diversas linguagens de programação, garantimos qualidade e eficiência em cada projeto.</p>
+            <p>A EvoTech é uma empresa dedicada a transformar ideias em soluções tecnológicas de alto impacto. Com vasta experiência em desenvolvimento de sistemas, criação de sites e aplicações web, nossa equipe utiliza as melhores práticas e ferramentas do mercado para atender às necessidades de cada cliente. Somos movidos pela inovação, compromisso com a qualidade e entrega de resultados que superam expectativas.</p>
         </div>
     </section>
 
