--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="EvoTech - Especialista em Desenvolvimento de Sistemas, Sites e Aplicações Web">
-    <meta name="keywords" content="Desenvolvimento de Sistemas, Sites, Aplicações Web, PHP, JavaScript, Delphi, HTML, CSS, Bootstrap">
+    <meta name="description" content="EvoTech - Especialista em Desenvolvimento de Sistemas, Sites e Aplicações Web personalizados">
+    <meta name="keywords" content="Desenvolvimento de Sistemas, Sites Responsivos, Aplicações Web, Delphi, Firebird, PHP, JavaScript, Bootstrap">
     <meta name="author" content="EvoTech">
-    <title>EvoTech - Início</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="robots" content="index, follow">
+    <title>EvoTech - Soluções Tecnológicas Sob Medida</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -33,9 +34,9 @@
     <!-- Hero Section -->
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
-            <h1>Bem-vindo à EvoTech</h1>
-            <p class="lead">Especialista em Desenvolvimento de Sistemas, Sites e Aplicações Web</p>
-            <a href="#contact" class="btn btn-light btn-lg">Solicitar Orçamento</a>
+            <h1 class="display-4">Bem-vindo à EvoTech</h1>
+            <p class="lead">Especialistas em desenvolvimento de sistemas, sites responsivos e aplicações web inovadoras.</p>
+            <a href="#contact" class="btn btn-light btn-lg mt-3">Solicitar Orçamento</a>
         </div>
     </header>
 
@@ -43,21 +44,21 @@
     <section id="services" class="py-5">
         <div class="container text-center">
             <h2 class="mb-4">Nossos Serviços</h2>
-            <div class="row">
+            <div class="row g-4">
                 <div class="col-md-4">
-                    <i class="bi bi-laptop fs-1"></i>
+                    <i class="bi bi-laptop fs-1 text-primary"></i>
                     <h4>Desenvolvimento de Sistemas</h4>
-                    <p>Criação de sistemas personalizados usando Delphi, integrados com bancos de dados robustos via FireDAC, relatórios detalhados e profissionais com Rave Reports, garantindo soluções rápidas, seguras e adaptáveis às suas necessidades específicas.</p>
+                    <p>Criação de sistemas personalizados usando Delphi, FireDAC e Rave Reports, garantindo soluções rápidas e seguras.</p>
                 </div>
                 <div class="col-md-4">
-                    <i class="bi bi-code-slash fs-1"></i>
-                    <h4>Criação de Sites</h4>
-                    <p>Desenvolvemos sites modernos, responsivos e otimizados para SEO, garantindo uma experiência incrível em qualquer dispositivo. Além disso, criamos aplicações web interativas com integração de APIs, painéis administrativos personalizados e suporte às mais recentes tecnologias web, como HTML5, CSS3, Bootstrap e frameworks JavaScript.</p>
+                    <i class="bi bi-code-slash fs-1 text-primary"></i>
+                    <h4>Criação de Sites e Aplicações Web</h4>
+                    <p>Sites modernos, responsivos e otimizados para SEO, além de aplicações web interativas com integrações avançadas.</p>
                 </div>
                 <div class="col-md-4">
-                    <i class="bi bi-server fs-1"></i>
+                    <i class="bi bi-server fs-1 text-primary"></i>
                     <h4>Integração com Bancos de Dados</h4>
-                    <p>Oferecemos integração eficiente com bancos de dados como MySQL, MariaDB e Firebird. Nossos serviços incluem modelagem de dados, otimização de consultas, configuração de servidores e implementação de conexões seguras e rápidas, garantindo o melhor desempenho para seus sistemas e aplicações.</p>
+                    <p>Configuração e otimização de bancos de dados como MySQL, MariaDB e Firebird, com conexões rápidas e seguras.</p>
                 </div>
             </div>
         </div>
@@ -67,19 +68,19 @@
     <section id="portfolio" class="bg-light py-5">
         <div class="container text-center">
             <h2 class="mb-4">Portfólio</h2>
-            <p>Confira alguns dos projetos desenvolvidos pela EvoTech.</p>
-            <div class="row">
+            <p>Confira alguns dos projetos que desenvolvemos para nossos clientes.</p>
+            <div class="row g-4">
                 <div class="col-md-4">
-                    <img src="project1.jpg" alt="Projeto 1" class="img-fluid rounded mb-3">
-                    <h5>Projeto 1</h5>
+                    <img src="project1.jpg" alt="Projeto 1" class="img-fluid rounded shadow">
+                    <h5 class="mt-2">Sistema de Gestão</h5>
                 </div>
                 <div class="col-md-4">
-                    <img src="project2.jpg" alt="Projeto 2" class="img-fluid rounded mb-3">
-                    <h5>Projeto 2</h5>
+                    <img src="project2.jpg" alt="Projeto 2" class="img-fluid rounded shadow">
+                    <h5 class="mt-2">Aplicação Web Interativa</h5>
                 </div>
                 <div class="col-md-4">
-                    <img src="project3.jpg" alt="Projeto 3" class="img-fluid rounded mb-3">
-                    <h5>Projeto 3</h5>
+                    <img src="project3.jpg" alt="Projeto 3" class="img-fluid rounded shadow">
+                    <h5 class="mt-2">Site Responsivo</h5>
                 </div>
             </div>
         </div>
@@ -89,7 +90,7 @@
     <section id="about" class="py-5">
         <div class="container text-center">
             <h2 class="mb-4">Sobre Nós</h2>
-            <p>A EvoTech é uma empresa dedicada a transformar ideias em soluções tecnológicas de alto impacto. Com vasta experiência em desenvolvimento de sistemas, criação de sites e aplicações web, nossa equipe utiliza as melhores práticas e ferramentas do mercado para atender às necessidades de cada cliente. Somos movidos pela inovação, compromisso com a qualidade e entrega de resultados que superam expectativas.</p>
+            <p>Somos especialistas em criar soluções tecnológicas sob medida, combinando inovação, qualidade e eficiência para atender às necessidades específicas de cada cliente.</p>
         </div>
     </section>
 
@@ -97,17 +98,17 @@
     <section id="contact" class="bg-primary text-white py-5">
         <div class="container text-center">
             <h2 class="mb-4">Entre em Contato</h2>
-            <p>Entre em contato para discutir seu próximo projeto ou solicitar um orçamento.</p>
+            <p>Pronto para começar seu próximo projeto? Envie-nos uma mensagem!</p>
             <form>
-                <div class="row">
-                    <div class="col-md-6 mb-3">
+                <div class="row g-3">
+                    <div class="col-md-6">
                         <input type="text" class="form-control" placeholder="Seu Nome" required>
                     </div>
-                    <div class="col-md-6 mb-3">
+                    <div class="col-md-6">
                         <input type="email" class="form-control" placeholder="Seu E-mail" required>
                     </div>
                 </div>
-                <div class="mb-3">
+                <div class="my-3">
                     <textarea class="form-control" rows="5" placeholder="Sua Mensagem" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-light">Enviar</button>
